src/api/nlopt_c_interface.f90


        integer(c_int) function nlopt_set_xtol_rel(opt,tol) bind(c,name="nlopt_set_xtol_rel")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        real(c_double) function nlopt_get_xtol_rel(opt) bind(c,name="nlopt_get_xtol_rel")
            import c_double, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function
        integer(c_int) function nlopt_set_xtol_abs1(opt,tol) bind(c,name="nlopt_set_xtol_abs1")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        integer(c_int) function nlopt_set_xtol_abs(opt,tol) bind(c,name="nlopt_set_xtol_abs")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: tol(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_get_xtol_abs(opt,tol) bind(c,name="nlopt_get_xtol_abs")
            import c_int, c_ptr, c_double
            type(c_ptr), intent(in), value :: opt
            real(c_double), intent(out) :: tol(nlopt_get_dimension(opt))
        end function

        integer(c_int) function nlopt_set_maxeval(opt,maxeval) bind(c,name="nlopt_set_maxeval")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: maxeval
        end function
        integer(c_int) function nlopt_get_maxeval(opt) bind(c,name="nlopt_get_maxeval")
            import c_int, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        integer(c_int) function nlopt_get_numevals(opt) bind(c,name="nlopt_get_numevals")
            import c_int, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        integer(c_int) function nlopt_set_maxtime(opt,maxtime) bind(c,name="nlopt_set_maxtime")
            import c_int, c_double, c_ptr
            type(c_ptr), value :: opt
            real(c_double), value :: maxtime
        end function
        real(c_double) function nlopt_get_maxtime(opt) bind(c,name="nlopt_get_maxtime")
            import c_double, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        integer(c_int) function nlopt_force_stop(opt) bind(c,name="nlopt_force_stop")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function
        integer(c_int) function nlopt_set_force_stop(opt,val) bind(c,name="nlopt_set_force_stop")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: val
        end function
        integer(c_int) function nlopt_get_force_stop(opt) bind(c,name="nlopt_get_force_stop")
            import c_int, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        !
        ! more algorithm-specific parameters
        !

        integer(c_int) function nlopt_set_local_optimizer(opt,local_opt) bind(c,name="nlopt_set_local_optimizer")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            type(c_ptr), intent(in), value :: local_opt
        end function

        integer(c_int) function nlopt_set_population(opt,pop) bind(c,name="nlopt_set_population")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: pop
        end function
        integer(c_int) function nlopt_get_population(opt) bind(c,name="nlopt_get_population")
            import c_int, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        integer(c_int) function nlopt_set_vector_storage(opt,dim) bind(c,name="nlopt_set_vector_storage")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: dim
        end function
        integer(c_int) function nlopt_get_vector_storage(opt) bind(c,name="nlopt_get_vector_storage")
            import c_int, c_ptr
            type(c_ptr), intent(in), value :: opt
        end function

        integer(c_int) function nlopt_set_default_initial_step(opt,x) bind(c,name="nlopt_set_default_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: x(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_set_initial_step(opt,dx) bind(c,name="nlopt_set_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: dx(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_set_initial_step1(opt,dx) bind(c,name="nlopt_set_initial_step1")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: dx
        end function
        integer(c_int) function nlopt_get_initial_step(opt,x,dx) bind(c,name="nlopt_get_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), intent(in), value :: opt
            real(c_double), intent(in) :: x(nlopt_get_dimension(opt))
            real(c_double), intent(out) :: dx(nlopt_get_dimension(opt))
        end function

    end interface

end module nlopt_c_interface